--- a/lab3/CMakeLists.txt
+++ b/lab3/CMakeLists.txt
@@ -1,4 +1,5 @@
-return() # Remove this line
+# УБРАТЬ: return()  (он ломал сборку каталога)
+
 find_package(Threads REQUIRED)
 
 add_library(proxy INTERFACE)
@@ -6,6 +7,13 @@ target_include_directories(proxy INTERFACE include)
 target_link_libraries(proxy INTERFACE Threads::Threads)
 
 file(GLOB TESTS tests/*.cpp)
+
 add_executable(tests_proxy ${TESTS})
-target_link_libraries(tests_proxy proxy Catch2::Catch2WithMain Boost::boost)
+target_link_libraries(tests_proxy
+    PRIVATE
+        proxy
+        Catch2::Catch2WithMain
+        Boost::boost
+)
+
 catch_discover_tests(tests_proxy)
